Small changes to the page

--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Hello my world!</h1>
+    <h1>Mokausi naudotis github</h1>
 </body>
 </html>
